# fastapi_monitoring

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  prometheus.yaml  pyproject.toml
fastapi_monitoring/: app.py
