[tool.poetry]
name = "fastapi-monitoring"
version = "0.1.0"
description = "Sample FastApi with monitoring"
authors = ["Shamsi Abdullayev"]
license = "MIT License"
readme = "README.md"
packages = [{include = "fastapi_monitoring"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.1"
fastapi-limiter = "^0.1.5"
prometheus-client = "^0.17.1"
redis = "^4.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
